# CSGOptiX

./: CMakeLists.txt  CSGOptiX.cc  CSGOptiX.h  CSGOptiXConfig.cmake.in  CSGOptiXFlight.sh  CSGOptiXRender.sh  CXUtil.cc  CXUtil.h  Frame.cc  Frame.h  GAS_Builder.cc  GAS_Builder.h  IAS_Builder.cc  IAS_Builder.h  OptiX6Test.cu  OptiX7Test.cu  OptiXTest.cc  PIP.cc  Params.cc  Params.h  README.rst  SBT.cc  SBT.h  Six.cc  Six.h  Util.cc  Util.h  all.sh  build.sh  cxr.sh  cxr_demo.sh  cxr_overview.sh  cxr_rsync.sh  cxr_scan.sh  cxr_sla.sh  cxr_solid.sh  cxr_solids.sh  cxr_table.sh  cxr_view.sh  cxrscan.sh  (+7 more)
tests/: CMakeLists.txt  CSGOptiXFlight.cc  CSGOptiXRender.cc  CSGOptiXSimulate.cc  CSGOptiXTest.cc  CSGOptiXTest.sh  DemoGeo.cc  DemoGeo.h  DemoGrid.cc  DemoUtil.cc  DemoUtil.h
